--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,8 +26,8 @@ body {
 
 @font-face {
     font-family: 'TT Lakes';
-    src: url('./fonts/TTLakes-Medium.woff') format('woff'),
-         url('./fonts/TTLakes-Medium.ttf') format('truetype');
+    src: url('./fonts/TTLakes-Regular.woff') format('woff'),
+         url('./fonts/TTLakes-Regular.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
