--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,24 +18,24 @@ body {
 
 @font-face {
     font-family: 'TT Lakes';
-    src: url('./fonts/TTLakes-Light.woff') format('woff'),
-         url('./fonts/TTLakes-Light.ttf') format('truetype'); 
+    src: url('../fonts/TTLakes-Light.woff') format('woff'),
+         url('../fonts/TTLakes-Light.ttf') format('truetype'); 
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'TT Lakes';
-    src: url('./fonts/TTLakes-Regular.woff') format('woff'),
-         url('./fonts/TTLakes-Regular.ttf') format('truetype');
+    src: url('../fonts/TTLakes-Regular.woff') format('woff'),
+         url('../fonts/TTLakes-Regular.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'TT Lakes';
-    src: url('./fonts/TTLakes-Bold.woff') format('woff'),
-         url('./fonts/TTLakes-Bold.ttf') format('truetype');
+    src: url('../fonts/TTLakes-Bold.woff') format('woff'),
+         url('../fonts/TTLakes-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
