--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -133,41 +133,46 @@ h1{
     
 }
 
-.services-btn{
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    position: relative;
+ul {
+  list-style: none;   
+  margin: 0;          
+  padding: 0;
+  margin-top: 50px;
 }
 
-.services-btn li:first-child a {
-    display: block;
-    padding: 7px 20px;
-    border: 2px solid #B8FFEC;
-    border-radius:6px;
-    text-decoration: none;
-    background-color:#FFFFFF ;
-    transition: 0.3s;
-} 
-
-.services-btn li {
-    position: relative;
-    text-align: center;
-    display: block;
-    cursor: pointer;
-    white-space: nowrap;
+ul button {
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s;
+  color: #1B1C21;
+  padding: 12px 16px;
+  font-family: 'TT Lakes';
+  font-weight: 500;
+  font-style: normal;
+  font-size: 16px;
 }
 
-.services-btn li a {
-    display: block;
-    padding: 7px 20px;
-    border-radius:6px;
-    color: #7E7E82;
-    font-family: 'TT Lakes';
-    font-weight: 500;
-    font-style: normal;
-    text-decoration: none;
+ul button:focus  {
+  color:#7E7E82;
 }
+
+ul button:focus::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 4px;
+  height: 100%;
+  background: #41F6D7;
+  border-radius: 2px;
+}
+
+.menu button:hover {
+  background: #FFFF;
+  color: #41F6D7;
+  transform: translateX(4px);
+}
+
 
 .text {
     max-height: 8em;
