--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -117,46 +117,33 @@ h1{
     
 }
 
-ul {
-  list-style: none;   
-  margin: 0;          
+nav {
+  display: flex;  
+}
+
+.services-btn {
+  list-style: none;
   padding: 0;
-  margin-top: 50px;
+  margin: 0;
+  display: flex;
+  gap: 10px;    
 }
 
-ul button {
-  position: relative;
+.services-btn button {
+  background-color: #F8F8F8;
+  color: #7E7E82;
+  padding: 10px 15px;
+  border: none;
   cursor: pointer;
-  transition: background-color 0.2s, color 0.2s;
-  color: #1B1C21;
-  padding: 12px 16px;
-  font-family: 'TT Lakes';
-  font-weight: 500;
-  font-style: normal;
-  font-size: 16px;
+  transition: background 0.3s;
+  border-radius: 6px;
 }
 
-ul button:focus  {
-  color:#7E7E82;
+.services-btn button.active {
+  border: 2px solid #B8FFEC;
+  background-color: #FFFFFF;
+  color: #7E7E82;
 }
-
-ul button:focus::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 4px;
-  height: 100%;
-  background: #41F6D7;
-  border-radius: 2px;
-}
-
-.menu button:hover {
-  background: #FFFF;
-  color: #41F6D7;
-  transform: translateX(4px);
-}
-
 
 .text {
     max-height: 8em;
