--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,21 +87,21 @@ span{
     display: flex;
 }
 
-.title-vertical {
-    position: relative;
-    padding-left: 10px;
-}
+// .title-vertical {
+//     position: relative;
+//     padding-left: 10px;
+// }
 
-.title-vertical::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 4px;
-    height: 40px;
-    background: #41F6D7;
-    border-radius: 2px;
-}
+// .title-vertical::before {
+//     content: "";
+//     position: absolute;
+//     left: 0;
+//     top: 0;
+//     width: 4px;
+//     height: 40px;
+//     background: #41F6D7;
+//     border-radius: 2px;
+// }
 .status-btn2, .settings-btn2{
     background: none;
     border: none;            
@@ -114,6 +114,8 @@ h1{
     font-style: normal;
     color: #1B1C21;
     height: 40px;
+    border-left: 4px solid #41F6D7;
+    padding-left: 20px ;
     
 }
 
@@ -227,11 +229,11 @@ p {
         height: 40px;
 
     }
-    .services-btn {
-        overflow-y: auto;
-        white-space: nowrap;
-        scrollbar-width: none;
-    }
+    // .services-btn {
+    //     overflow-y: auto;
+    //     white-space: nowrap;
+    //     scrollbar-width: none;
+    // }
     p {
         width: 320px;
         margin-left: 16px;
@@ -303,10 +305,10 @@ p {
     h1{
         margin-right: 430px;
     }
-    // .services-btn{
-    //     overflow: hidden;
-    //     flex-wrap: wrap;
-    // }
+    .services-btn{
+        overflow: hidden;
+        flex-wrap: wrap;
+    }
     .container {
         display: flex;         
         justify-content: space-between; 
@@ -328,3 +330,4 @@ p {
         margin-right: 15px;
     }
 }
+
