--- a/src/scss/_side.scss
+++ b/src/scss/_side.scss
@@ -23,13 +23,16 @@
     background-color: #F8F8F8;
     color: $gray-text;
     padding: 10px 15px;
-    border: 2px;
+    border: 2px solid transparent;
     cursor: pointer;
     transition: background 0.3s;
     border-radius: 6px;
     width: 248px;
     height: 40px;
     font-size: 16px;
+    display: flex;            
+    justify-content: center;
+    align-items: center;
 }
 
 
