--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,8 @@
 @use 'content.scss' ;
 @use 'brands.scss' ;
 @use 'devices.scss' ;
-@use 'prices' ;
+@use 'prices.scss' ;
+@use 'services.scss' ;
 
 
 @font-face {
