--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -60,7 +60,7 @@
     border: none;
     cursor: pointer;
     margin-top: 16px;
-    transition: transform 0.2s ease;
+    // transition: transform 0.2s ease;
 
     }
     
