--- a/src/scss/_prices.scss
+++ b/src/scss/_prices.scss
@@ -12,13 +12,14 @@
     width: 100%;
     table-layout: fixed;
     color: #8e8e8e;
-    font-size: 14px;
-    font-weight: 500;
     background-color: transparent;
-    margin-bottom: 8px; 
+    margin-bottom: 8px;
   }
 
   thead th {
+    font-family: "TT Lakes";
+    font-weight: 500;
+    font-size: 14px;
     text-align: left;
     padding: 16px 24px;
   }
@@ -37,6 +38,9 @@
   }
 
   tbody td {
+    font-family: "TT Lakes";
+    font-weight: 400;
+    font-size: 14px;
     border-bottom: 1px solid #f3f3f3;
     padding: 16px 24px;
     vertical-align: middle;
@@ -68,9 +72,16 @@
   }
 
   &__note {
+    font-family: "TT Lakes";
+    font-weight: 400;
     font-size: 13px;
     color: #666;
     margin: 12px 0 8px;
+  }
+
+  &__link {
+    font-family: "TT Lakes";
+    font-weight: 500;
   }
 
   &__link-btn {
