--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,8 @@
 @use 'devices.scss' ;
 @use 'prices.scss' ;
 @use 'services.scss' ;
+@use 'footer.scss' ;
+@use 'menu.scss' ;
 
 
 @font-face {
@@ -269,132 +271,132 @@ body {
     font-weight: 500;
   }
 
-@media (min-width: 320px) and (max-width: 767px){
-    header {
-        width: 100%;
-        height: 88px;
-        gap: 15px;
-        align-items: center;
-    }
-    .v-line2 {
-        width: 2px;            
-        height: 32px;          
-        background-color: #EAEAEA;  
-    }
-    .phone-btn, .messenger-btn, .profile-btn {
-        display: none;
+// @media (min-width: 320px) and (max-width: 767px){
+//     header {
+//         width: 100%;
+//         height: 88px;
+//         gap: 15px;
+//         align-items: center;
+//     }
+//     .v-line2 {
+//         width: 2px;            
+//         height: 32px;          
+//         background-color: #EAEAEA;  
+//     }
+//     .phone-btn, .messenger-btn, .profile-btn {
+//         display: none;
 
-    } 
-    span {
-        font-size: 0;
-    }
-    .settings-btn2, .status-btn2 {
-        display: none;
-    }      
-    h1 {
-        width: 304px;
-        height: 40px;
+//     } 
+//     span {
+//         font-size: 0;
+//     }
+//     .settings-btn2, .status-btn2 {
+//         display: none;
+//     }      
+//     h1 {
+//         width: 304px;
+//         height: 40px;
 
-    }
-    // .services-btn {
-    //     overflow-y: auto;
-    //     white-space: nowrap;
-    //     scrollbar-width: none;
-    // }
-    p {
-        width: 320px;
-        margin-left: 16px;
-        margin-right: 16px;
-    }
-    .picture img {
-        width: 100%;
-        height:auto;
-    }
-}
+//     }
+//     // .services-btn {
+//     //     overflow-y: auto;
+//     //     white-space: nowrap;
+//     //     scrollbar-width: none;
+//     // }
+//     p {
+//         width: 320px;
+//         margin-left: 16px;
+//         margin-right: 16px;
+//     }
+//     .picture img {
+//         width: 100%;
+//         height:auto;
+//     }
+// }
 
-@media (min-width: 768px) and (max-width: 1119px){
-    header {
-        width: 100%;
-        height: 88px;
-        gap: 15px;
-        align-items: center;
-    }
-    span {
-        font-size: 0;
-    }
-    .settings-btn2, .status-btn2 {
-        display: none;
-    } 
-    .v-line1 {
-        width: 2px;            
-        height: 32px;          
-        background-color: #EAEAEA;  
-    }
-    .v-line2 {
-        width: 2px;            
-        height: 32px;          
-        background-color: #EAEAEA;  
-    }
-    .services-btn {
-        overflow-y: auto;
-        white-space: nowrap;
-        scrollbar-width: none;
-    }
-   .container {
-        display: flex;         
-        justify-content: space-between; 
-        align-items: flex-start; 
-        gap: 48px;           
-    }
+// @media (min-width: 768px) and (max-width: 1119px){
+//     header {
+//         width: 100%;
+//         height: 88px;
+//         gap: 15px;
+//         align-items: center;
+//     }
+//     span {
+//         font-size: 0;
+//     }
+//     .settings-btn2, .status-btn2 {
+//         display: none;
+//     } 
+//     .v-line1 {
+//         width: 2px;            
+//         height: 32px;          
+//         background-color: #EAEAEA;  
+//     }
+//     .v-line2 {
+//         width: 2px;            
+//         height: 32px;          
+//         background-color: #EAEAEA;  
+//     }
+//     .services-btn {
+//         overflow-y: auto;
+//         white-space: nowrap;
+//         scrollbar-width: none;
+//     }
+//    .container {
+//         display: flex;         
+//         justify-content: space-between; 
+//         align-items: flex-start; 
+//         gap: 48px;           
+//     }
 
-    .text-container {
-        width: 312px; 
-        margin-left: 15px;    
-    }
-    .text{
-        max-height:12.5em ;
-    }
-    .picture img {
-        width: 360px;       
-        height: auto;
-        margin-right: 15px;
-    }
+//     .text-container {
+//         width: 312px; 
+//         margin-left: 15px;    
+//     }
+//     .text{
+//         max-height:12.5em ;
+//     }
+//     .picture img {
+//         width: 360px;       
+//         height: auto;
+//         margin-right: 15px;
+//     }
 
-}
+// }
 
-@media (min-width: 1120px){
-    header {
-        display: none; 
-    }
-    .header-buttons{
-       align-items: center; 
-    }
-    h1{
-        margin-right: 430px;
-    }
-    .services-btn{
-        overflow: hidden;
-        flex-wrap: wrap;
-    }
-    .container {
-        display: flex;         
-        justify-content: space-between; 
-        align-items: flex-start; 
-        gap: 36px;           
-    }
-    .text-container {
-        min-width: 490px; 
-        height: 160px;
-        margin-left: 15px;    
-    }
-    .text{
-        max-height:none ;
-    }
+// @media (min-width: 1120px){
+//     header {
+//         display: none; 
+//     }
+//     .header-buttons{
+//        align-items: center; 
+//     }
+//     h1{
+//         margin-right: 430px;
+//     }
+//     .services-btn{
+//         overflow: hidden;
+//         flex-wrap: wrap;
+//     }
+//     .container {
+//         display: flex;         
+//         justify-content: space-between; 
+//         align-items: flex-start; 
+//         gap: 36px;           
+//     }
+//     .text-container {
+//         min-width: 490px; 
+//         height: 160px;
+//         margin-left: 15px;    
+//     }
+//     .text{
+//         max-height:none ;
+//     }
 
-    .picture img {
-        width: 531px;       
-        height: auto;
-        margin-right: 15px;
-    }
-}
+//     .picture img {
+//         width: 531px;       
+//         height: auto;
+//         margin-right: 15px;
+//     }
+// }
 
