--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -113,3 +113,14 @@
     );
   }
 }
+
+@media (max-width: 767px){
+  .brands{
+    display: none;
+  }
+}
+@media (min-width: 767px){
+  .brands-slider{
+    display: none;
+  }
+}
