--- a/src/scss/_side.scss
+++ b/src/scss/_side.scss
@@ -2,13 +2,14 @@
 
 .side-menu__nav {
     display: flex;
+    margin-left: 34px;
 }
 
 
 .side-menu__list {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin:0;
     display: flex;
     gap: 10px;
     overflow-y: auto;
@@ -40,4 +41,15 @@
     border: 2px solid #B8FFEC;
     background-color: #FFFFFF;
     color: $gray-text;
+}
+
+@media (min-width:1440px){
+    .side-menu__list {
+        display: flex;
+        flex-wrap: wrap; /* разрешает перенос элементов */
+        overflow: hidden; /* убирает скролл */
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
 }
