--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -1,7 +1,7 @@
 @use 'vary.scss' as *;
 
 .content__text {
-    max-height: 8em;
+    max-height: 7.8em;
     overflow: hidden;
     transition: max-height 0.4s ease;
     margin: 24px;
@@ -35,6 +35,7 @@ br {
     text-decoration: none;
     margin-top: 8px;
     user-select: none;
+    margin-left: 25px;
 }
 
 
