--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -52,7 +52,7 @@ br {
     font-size: 14px;
     font-style: normal;
     text-decoration: none;
-    color:#1B1C21;
+    color:$back-text;
 }
 .content__img {
     width: 320px;
