--- a/src/scss/_vary.scss
+++ b/src/scss/_vary.scss
@@ -1,2 +1,7 @@
 $gray-text: #7E7E82;
 $green-decor:#41F6D7;
+$back-text:#1B1C21;
+$light_green-decor:#B8FFEC;
+$border:#EAEAEA;
+$white-back:#FFFFFF;
+$gray-back:#F8F8F8;
