--- a/src/scss/_prices.scss
+++ b/src/scss/_prices.scss
@@ -1,3 +1,5 @@
+@use 'vary.scss' as *;
+
 .prices {
   padding: 40px;
   
@@ -35,13 +37,14 @@
     display: table;
     width: 100%;
     table-layout: fixed;
+    height: 64px;
   }
 
   tbody td {
     font-family: "TT Lakes";
     font-weight: 400;
     font-size: 14px;
-    border-bottom: 1px solid #f3f3f3;
+    border-bottom: 1px solid $border;
     padding: 16px 24px;
     vertical-align: middle;
   }
@@ -66,7 +69,7 @@
     background: none;
     border: none;
     padding: 0;
-    padding: 8px 20px;
+    padding: 8px 10px;
     cursor: pointer;
     width: 119px;
   }
@@ -75,13 +78,14 @@
     font-family: "TT Lakes";
     font-weight: 400;
     font-size: 13px;
-    color: #666;
-    margin: 12px 0 8px;
+    color: $gray-text;
+    margin: 12px 24px 8px;
   }
 
   &__link {
     font-family: "TT Lakes";
     font-weight: 500;
+    margin-left: 24px;
   }
 
   &__link-btn {
@@ -93,7 +97,7 @@
     .prices{
       display: none;
     }
-    .prices__titel{
+    .prices__titel {
       display: none;
     }
 }
