--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -1,6 +1,8 @@
+@use 'vary.scss' as *;
+
 .services {
   padding: 40px 0;
-  background-color: #f9f9f9;
+  background-color: $gray-back;
   text-align: center;
 
   &__slider {
@@ -37,7 +39,7 @@
 }
 
 .card {
-  background-color: #fff;
+  background-color: $white-back;
   border-radius: 6px;
   width: 260px;
   height: 200px;
@@ -57,14 +59,14 @@
     font-family: "TT Lakes";
     font-weight: 500;
     font-size: 14px;
-    color: #777;
+    color: $gray-text;
     margin-top: 6px;
   }
 
   &__text {
     font-family: "TT Lakes";
     font-size: 16px;
-    color: #222;
+    color: $back-text;
     font-weight: 500;
   }
 
