--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@use 'vary.scss' ;
+@use 'vary.scss' as *;
 @use 'header.scss' ;
 @use 'side.scss' ;
 @use 'content.scss' ;
@@ -36,7 +36,7 @@
 
 
 body {
-    background-color: #F8F8F8;
+    background-color: $gray-back;
     margin: 0;
     overflow-x: hidden;
 }
@@ -50,175 +50,7 @@ body {
   transition: margin-left 0.3s ease;
 }
 
-// header {
-//     display: flex;
-//     background-color: #FFFFFF;
-//     margin: 0;
-//     gap:16px;
-// }
 
-// header button {
-//     background: none;
-//     border: none;     
-//     padding: 0;        
-//     cursor: pointer;    
-// }
-
-// header button img {
-//     display: block;     
-//     width: 40px;        
-//     height: auto;
-// }
-
-// .menu-btn{
-//     margin-left: 15px;
-// }
-
-// header .logo {
-//     width: 96.55px;
-//     height: auto;
-// }
-
-// .header-box {
-//     display: flex;
-//     align-items: center;
-//     margin-left: auto;
-//     margin-right: 16px;
-//     gap: 16px;
-// }
-
-// .title-wrapper {
-//     display: flex;
-//     flex-direction: row;
-// }
-
-// .header-buttons {
-//     display: flex;
-//     align-items: center;
-//     gap: 5px;
-//     margin-left: auto;
-// }
-
-// span{
-//     font-family: 'TT Lakes';
-//     font-weight: 500;
-//     font-style: normal;
-//     display: flex;
-// }
-
-// // .title-vertical {
-// //     position: relative;
-// //     padding-left: 10px;
-// // }
-
-// // .title-vertical::before {
-// //     content: "";
-// //     position: absolute;
-// //     left: 0;
-// //     top: 0;
-// //     width: 4px;
-// //     height: 40px;
-// //     background: #41F6D7;
-// //     border-radius: 2px;
-// // }
-// .status-btn2, .settings-btn2{
-//     background: none;
-//     border: none;            
-//     cursor: pointer;
-//     margin-right: 10px;
-// }
-// h1{
-//     font-family: 'TT Lakes';
-//     font-weight: 700;
-//     font-style: normal;
-//     color: #1B1C21;
-//     height: 40px;
-//     border-left: 4px solid #41F6D7;
-//     padding-left: 20px ;
-    
-// }
-
-// nav {
-//     display: flex;  
-// }
-
-// .services-btn {
-//     list-style: none;
-//     padding: 0;
-//     margin: 0;
-//     display: flex;
-//     gap: 10px;
-//     overflow-y: auto;
-//     white-space: nowrap;
-//     scrollbar-width: none;    
-// }
-
-// .services-btn button {
-//     font-family:'TT Lakes';
-//     font-weight: 500;  
-//     background-color: #F8F8F8;
-//     color: #7E7E82;
-//     padding: 10px 15px;
-//     border: none;
-//     cursor: pointer;
-//     transition: background 0.3s;
-//     border-radius: 6px;
-//     width: 248px;
-//     height: 40px;
-//     font-size: 16px;
-// }
-
-// .services-btn button.active {
-//     border: 2px solid #B8FFEC;
-//     background-color: #FFFFFF;
-//     color: #7E7E82;
-// }
-
-// .text {
-//     max-height: 8em;
-//     overflow: hidden;
-//     transition: max-height 0.4s ease;
-// }
-
-// br {
-//     display: block;
-//     margin: 4px 0; 
-//     content: "";
-// }
-
-// #toggle {
-//     display: none;
-// }
-
-// #toggle:checked ~ .text {
-//     max-height: 99999999px; 
-// }
-
-// .toggle-label {
-//     display: flex;
-//     align-items: center;
-//     cursor: pointer;
-//     font-family: 'TT Lakes';
-//     font-weight: 500;
-//     font-style: normal;
-//     text-decoration: none;
-//     margin-top: 8px;
-//     user-select: none;
-// }
-// .toggle-label img {
-//     width: 24px;
-//     height: 24px;
-//     transition: transform 0.3s ease;
-// }
-
-// p {
-//     font-family: 'TT Lakes';
-//     font-weight: 400;
-//     font-size: 14px;
-//     font-style: normal;
-//     text-decoration: none;
-//     color:#1B1C21 ;
-// }
 
  h2 {
     display: flex;
@@ -227,12 +59,12 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #7E7E82;
-    background: linear-gradient(90deg, #F8F8F8 1.39%, #FFFFFF 100%);
+    background: linear-gradient(90deg, $gray-back 1.39%, $white-back 100%);
     padding-left: 24px;
     margin: 0;
     height: 58px;
     width: 100%;
-    border-top: 1px solid #D9FFF5;
+    border-top: 1px solid $light_green-decor;
   }
 
   h3 {
@@ -242,13 +74,13 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #7E7E82;
-    background: linear-gradient(90deg, #F8F8F8 1.39%, #FFFFFF 100%);
+    background: linear-gradient(90deg, $gray-back 1.39%, $white-back 100%);
     display: flex;
     padding: 16px 16px 16px 62px;
     margin: 0;
     width: 100%;
     text-align: left;
-    border-top: 1px solid #D9FFF5;
+    border-top: 1px solid $light_green-decor;
   }
 
   .icon {
@@ -272,7 +104,7 @@ body {
     padding: 8px 12px;
     cursor: pointer;
     border: 0;
-    background-color: #F8F8F8;
+    background-color: $gray-back;
     display: flex;
     align-items: center;
     gap: 8px;
@@ -280,132 +112,4 @@ body {
     font-weight: 500;
   }
 
-// @media (min-width: 320px) and (max-width: 767px){
-//     header {
-//         width: 100%;
-//         height: 88px;
-//         gap: 15px;
-//         align-items: center;
-//     }
-//     .v-line2 {
-//         width: 2px;            
-//         height: 32px;          
-//         background-color: #EAEAEA;  
-//     }
-//     .phone-btn, .messenger-btn, .profile-btn {
-//         display: none;
-
-//     } 
-//     span {
-//         font-size: 0;
-//     }
-//     .settings-btn2, .status-btn2 {
-//         display: none;
-//     }      
-//     h1 {
-//         width: 304px;
-//         height: 40px;
-
-//     }
-//     // .services-btn {
-//     //     overflow-y: auto;
-//     //     white-space: nowrap;
-//     //     scrollbar-width: none;
-//     // }
-//     p {
-//         width: 320px;
-//         margin-left: 16px;
-//         margin-right: 16px;
-//     }
-//     .picture img {
-//         width: 100%;
-//         height:auto;
-//     }
-// }
-
-// @media (min-width: 768px) and (max-width: 1119px){
-//     header {
-//         width: 100%;
-//         height: 88px;
-//         gap: 15px;
-//         align-items: center;
-//     }
-//     span {
-//         font-size: 0;
-//     }
-//     .settings-btn2, .status-btn2 {
-//         display: none;
-//     } 
-//     .v-line1 {
-//         width: 2px;            
-//         height: 32px;          
-//         background-color: #EAEAEA;  
-//     }
-//     .v-line2 {
-//         width: 2px;            
-//         height: 32px;          
-//         background-color: #EAEAEA;  
-//     }
-//     .services-btn {
-//         overflow-y: auto;
-//         white-space: nowrap;
-//         scrollbar-width: none;
-//     }
-//    .container {
-//         display: flex;         
-//         justify-content: space-between; 
-//         align-items: flex-start; 
-//         gap: 48px;           
-//     }
-
-//     .text-container {
-//         width: 312px; 
-//         margin-left: 15px;    
-//     }
-//     .text{
-//         max-height:12.5em ;
-//     }
-//     .picture img {
-//         width: 360px;       
-//         height: auto;
-//         margin-right: 15px;
-//     }
-
-// }
-
-// @media (min-width: 1120px){
-//     header {
-//         display: none; 
-//     }
-//     .header-buttons{
-//        align-items: center; 
-//     }
-//     h1{
-//         margin-right: 430px;
-//     }
-//     .services-btn{
-//         overflow: hidden;
-//         flex-wrap: wrap;
-//     }
-//     .container {
-//         display: flex;         
-//         justify-content: space-between; 
-//         align-items: flex-start; 
-//         gap: 36px;           
-//     }
-//     .text-container {
-//         min-width: 490px; 
-//         height: 160px;
-//         margin-left: 15px;    
-//     }
-//     .text{
-//         max-height:none ;
-//     }
-
-//     .picture img {
-//         width: 531px;       
-//         height: auto;
-//         margin-right: 15px;
-//     }
-// }
 
