--- a/src/scss/_devices.scss
+++ b/src/scss/_devices.scss
@@ -144,6 +144,27 @@
   }
 }
 
+.devices-slider {
+  position: relative;
+  overflow: hidden; 
+}
+
+
+.devices-slider__fade {
+  position: absolute;
+  top: 0;
+  width: 60px;
+  height: 100%;
+  pointer-events: none; 
+  z-index: 5;
+}
+
+.devices-slider__fade--right {
+  right: 0;
+  background: linear-gradient(270deg, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+
+}
+
 @media (max-width: 767px){
   .devices{
     display: none;
